--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 /build
 
 # misc
+.idea
 .DS_Store
 *.pem
 
@@ -34,3 +35,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# amplify
+.amplify
+amplify_outputs*
+amplifyconfiguration*
